--- a/(시각화)분기별 생활인구수.ipynb
+++ b/(시각화)분기별 생활인구수.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "[487 rows x 9 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,46 +452,6 @@
        "      <td>1113679.00</td>\n",
        "      <td>878251.50</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21년 2분기</th>\n",
-       "      <td>194846.0</td>\n",
-       "      <td>610265.6</td>\n",
-       "      <td>429622.25</td>\n",
-       "      <td>577350.666667</td>\n",
-       "      <td>138341.5</td>\n",
-       "      <td>702514.333333</td>\n",
-       "      <td>562597.2</td>\n",
-       "      <td>586504.50</td>\n",
-       "      <td>792191.75</td>\n",
-       "      <td>810360.25</td>\n",
-       "      <td>934158.9</td>\n",
-       "      <td>686460.50</td>\n",
-       "      <td>497440.00</td>\n",
-       "      <td>568050.6</td>\n",
-       "      <td>804780.666667</td>\n",
-       "      <td>988133.50</td>\n",
-       "      <td>858025.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21년 3분기</th>\n",
-       "      <td>198596.0</td>\n",
-       "      <td>602171.8</td>\n",
-       "      <td>458551.50</td>\n",
-       "      <td>580699.000000</td>\n",
-       "      <td>170861.0</td>\n",
-       "      <td>567598.000000</td>\n",
-       "      <td>498474.2</td>\n",
-       "      <td>421038.00</td>\n",
-       "      <td>752434.00</td>\n",
-       "      <td>816737.75</td>\n",
-       "      <td>874579.2</td>\n",
-       "      <td>667323.50</td>\n",
-       "      <td>555197.50</td>\n",
-       "      <td>621490.8</td>\n",
-       "      <td>795541.000000</td>\n",
-       "      <td>995407.75</td>\n",
-       "      <td>789844.00</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -503,8 +463,6 @@
        "20년 3분기  201944.0  668417.0  402012.00  670436.000000  136688.5   \n",
        "20년 4분기  207138.0  638343.0  400687.50  647693.333333  133038.0   \n",
        "21년 1분기  209163.0  638010.6  443398.25  611333.333333  128329.5   \n",
-       "21년 2분기  194846.0  610265.6  429622.25  577350.666667  138341.5   \n",
-       "21년 3분기  198596.0  602171.8  458551.50  580699.000000  170861.0   \n",
        "\n",
        "동 정보              발산1동      방화1동       방화2동        염창동       우장산동      화곡1동  \\\n",
        "20년 1분기  669376.000000  633721.0  674867.00  784763.25  737459.00  935033.4   \n",
@@ -512,20 +470,16 @@
        "20년 3분기  689139.666667  631764.2  616222.00  787205.25  810669.75  998349.4   \n",
        "20년 4분기  676242.333333  639439.8  621818.75  803180.25  813467.50  965587.4   \n",
        "21년 1분기  675956.000000  643211.0  611584.00  840237.25  814319.25  992231.1   \n",
-       "21년 2분기  702514.333333  562597.2  586504.50  792191.75  810360.25  934158.9   \n",
-       "21년 3분기  567598.000000  498474.2  421038.00  752434.00  816737.75  874579.2   \n",
        "\n",
        "동 정보          화곡2동       화곡3동      화곡4동           화곡6동        화곡8동       화곡본동  \n",
        "20년 1분기  688772.25  529510.75  592561.6  764774.666667  1072286.00  865307.75  \n",
        "20년 2분기  654019.00  516323.25  665281.2  818534.000000   952512.00  848854.75  \n",
        "20년 3분기  679055.50  529476.25  641706.4  857460.666667   957440.00  908554.75  \n",
        "20년 4분기  706563.00  524384.75  593537.6  850589.333333   979050.75  896313.50  \n",
-       "21년 1분기  739460.50  531230.00  592293.2  853719.000000  1113679.00  878251.50  \n",
-       "21년 2분기  686460.50  497440.00  568050.6  804780.666667   988133.50  858025.25  \n",
-       "21년 3분기  667323.50  555197.50  621490.8  795541.000000   995407.75  789844.00  "
+       "21년 1분기  739460.50  531230.00  592293.2  853719.000000  1113679.00  878251.50  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,12 +494,12 @@
     "df_all=subset.join(df_all,how='inner')\n",
     "df_all.set_index('동 정보',inplace=True)\n",
     "df_all=df_all.T\n",
-    "df_all"
+    "df_all.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
